nomes dos projetos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTIFÓLIO</title>
 </head>
-<body>
-    
+<body> <p>Portifólios realizados por: Isabella Soares, João Vitor Hass e Milena Farias.</p>
+    <p>Trabalhos: </p>
+    <p>Redação, feito por Isabella</p> <p>Programação,feita por João Vitor</p> <p>Células, feita por Milena</p>
 </body>
 </html>
